deploy: 77ba050efe12e1383df693d0ebd9021a5dbe67ce

--- a/index.html
+++ b/index.html
@@ -771,7 +771,7 @@ section .location {
   
   <div id="resume">
     	<header id="header" class="clear">
-    		<img class="image" src="https://avatars0.githubusercontent.com/u/14184045?s&#x3D;400&amp;u&#x3D;aade382a84cf999ef364f2424ebf2c42c1c84078&amp;v&#x3D;4" alt="Govind Singh" />
+    		<img class="image" src="https://gravatar.com/userimage/210390833/d2be84a266c4e13deca5103595e454ad.jpeg?size&#x3D;256" alt="Govind Singh" />
     		<div class="middle">
     			<h1 class="name">Govind Singh</h1>
     			<h2 class="label">Senior Software Engineer</h2>
@@ -817,7 +817,7 @@ section .location {
     
     	<section class="section">
     		<section class="main-summary">
-    			<div><p><p>Results-oriented versatile Backend Developer with 8 years of experience developing, and managing complex Backend Architecture and robust digital products. Excellent leadership record of leading development teams in enterprise-wide development projects. Worked with Python Django for 3 years and NodeJs for 2 years. Skilled in JavaScript, Python, Rest APIs, Express Js, Docker, GIT, AWS and Pipelines.</p></p></div>
+    			<div><p><p>Results-oriented and versatile Backend Developer with 8 years of experience in developing and managing complex backend architectures and robust digital products. Proven track record of leading development teams in enterprise-wide projects, with a focus on quality, delivery, and reliability. Formerly with CoinSwitch, UrbanPiper, and Cartoon Mango Digital. Passionate about automating repetitive workflows and enhancing operational efficiency. Skilled mentor, having guided over 10+ team members. Strong time management skills and commitment to delivering high-quality solutions. Skilled in Python, JavaScript, Golang, Rest APIs, Docker, GIT, AWS, Pipelines and Grafana.</p></p></div>
     		</section>
     	</section>
     
@@ -833,6 +833,7 @@ section .location {
     			 			<ul class="keywords">
     				<li>Python</li>
     				<li>JavaScript</li>
+    				<li>Golang</li>
     				<li>C</li>
     				<li>Rust</li>
     			</ul>
@@ -843,7 +844,9 @@ section .location {
     			</h3>
     			 			<ul class="keywords">
     				<li>Django</li>
+    				<li>Flask</li>
     				<li>ExpressJS</li>
+    				<li>Gin</li>
     			</ul>
     		</div>
     		<div class="item">
@@ -851,6 +854,7 @@ section .location {
     				Databases
     			</h3>
     			 			<ul class="keywords">
+    				<li>PostgreSQL</li>
     				<li>MYSQL</li>
     				<li>MongoDB</li>
     				<li>Firebase</li>
@@ -862,21 +866,15 @@ section .location {
     				Tools
     			</h3>
     			 			<ul class="keywords">
-    				<li>Nginx</li>
-    				<li>Gunicorn</li>
-    				<li>Docker</li>
-    				<li>Bitbucket Pipeline</li>
-    				<li>Gitlab CI/CD</li>
-    				<li>Postman</li>
-    				<li>Insomnia</li>
-    				<li>Confluence</li>
-    				<li>Vim</li>
-    				<li>VS Code</li>
-    				<li>PyCharm</li>
-    				<li>Jira</li>
     				<li>Git</li>
+    				<li>Vim</li>
+    				<li>Docker</li>
+    				<li>Nginx</li>
+    				<li>Grafana</li>
+    				<li>Redash</li>
+    				<li>Jira</li>
     				<li>Redis</li>
-    				<li>RQ worker</li>
+    				<li>CI Pipelines</li>
     			</ul>
     		</div>
     		<div class="item">
@@ -915,10 +913,11 @@ section .location {
             <a target="_blank" href="https://peepal.co/">https://peepal.co/</a>
           </span>        <div class="item" id="work-item">
             <ul class="highlights">
-              <li><p><p>Developed and maintained a dedicated service for fee and discount management,</p></p></li>
-              <li><p><p>Contributed towards the relibility by preparing multiple SOPs and dashboards</p></p></li>
-              <li><p><p>Prepared documentation of various services for easy onboarding</p></p></li>
-              <li><p><p>Provided regular feedbacks on using best practices wherever required.</p></p></li>
+              <li><p><p>Developed and maintained a dedicated service for fee and discount management, provided more flexibility of configuring fee and discounts for different assets</p></p></li>
+              <li><p><p>Developed offer generation module for better flexibility feein/feeout construct, it stored the structured details of various stages of fee, discount, GST and TDS for better audit and tracibility.</p></p></li>
+              <li><p><p>Contributed towards the relibility by preparing multiple SOPs and dashboards, resulted in faster incident response times.</p></p></li>
+              <li><p><p>Created comprehensive documentation of various in house services, reduced onboarding time for new hires by 40%</p></p></li>
+              <li><p><p>Conducted training sessions, promoting best practices and reducing code defects by 15%.</p></p></li>
             </ul>
           </div>
         </section>
