deploy: 21abd0312c4e524a4fa3fd178c7e8b013d04949d

--- a/index.html
+++ b/index.html
@@ -812,14 +812,6 @@ section .location {
     					</span>
     				</div>
     			</div>
-    			<div class="item">
-    				<div class="username">
-    					<span class="fab fa-calendly calendly social"></span>
-    					<span class="url">
-    						<a target="_blank" href="https://calendly.com/connect-govinds">connect-govinds</a>
-    					</span>
-    				</div>
-    			</div>
     		</div>
     	</header>
     
@@ -871,7 +863,7 @@ section .location {
     		</div>
     		<div class="item">
     			<h3 class="name">
-    				Tools
+    				Software
     			</h3>
     			 			<ul class="keywords">
     				<li>Git</li>
