deploy: d0f7ee4ffaa334314a451f1baed977f8d7cb5b7d

--- a/resume-mini.html
+++ b/resume-mini.html
@@ -51,17 +51,17 @@
         <h2>PeepalCo (CoinSwitch), Senior Software Engineer</h2>
         <ul>
         <li>Dec 2021 – July 2024</li>
-        <li>Bengaluru, India</li>
-        <li>Developed and maintained a dedicated service for fee and discount management, provided more flexibility of configuring fee and discounts for different assets</li>
-        <li>Developed offer generation module for better flexibility feein/feeout construct, it stored the structured details of various stages of fee, discount, GST and TDS for better audit and tracibility.</li>
-        <li>Contributed towards the relibility by preparing multiple SOPs and dashboards, resulted in faster incident response times.</li>
-        <li>Created comprehensive documentation of various in house services, reduced onboarding time for new hires by 40%</li>
+        <li>Remote</li>
+        <li>Developed and maintained a dedicated service for fee and discount management, increasing flexibility in configuring fees and discounts for different assets.</li>
+        <li>Created an offer generation module that enhanced flexibility in fee-in/fee-out constructs, storing structured details of various stages of fees, discounts, GST, and TDS for improved auditability and traceability.</li>
+        <li>Contributed to system reliability by preparing multiple SOPs and dashboards, resulting in faster incident response times.</li>
+        <li>Created comprehensive documentation for various in-house services, reducing onboarding time for new hires by 40%.</li>
         <li>Conducted training sessions, promoting best practices and reducing code defects by 15%.</li>
         </ul>
         <h2>UrbanPiper Technology Pvt Ltd, Senior Software Engineer</h2>
         <ul>
         <li>Dec 2019 – Nov 2021</li>
-        <li>Bengaluru, India</li>
+        <li>Remote</li>
         <li>Evaluated product requirements and specifications, developing various product modules.</li>
         <li>Learned and utilized OLAP databases and GraphQL for enhanced data management and interaction.</li>
         <li>Developed Django management commands to automate redundant tasks, increasing efficiency.</li>
@@ -80,6 +80,11 @@
         <li>Trained and mentored junior developers in JavaScript, improving overall team performance and skill levels.</li>
         </ul>
         <h1>Projects</h1>
+        <h2>Open Source</h2>
+        <ul>
+        <li>Nov 2021</li>
+        <li>Contributed to open-source tools used in my regular workflow and made various enhancements to Neovim plugins. Visit my GitHub profile for more details.</li>
+        </ul>
         <h2>Offer Service</h2>
         <ul>
         <li>Apr 2022</li>
@@ -93,22 +98,22 @@
         <h2>Atlas</h2>
         <ul>
         <li>Dec 2019</li>
-        <li>Product comprises order and customer analytics, marketing campaign creation and invoice module.</li>
+        <li>Atlas is a comprehensive service that includes order and customer analytics, marketing campaign creation, and an invoice module.</li>
         </ul>
         <h2>Cricket.com</h2>
         <ul>
         <li>July 2018</li>
-        <li>A platform to provide cricket updates including score, schedules, articles, fantasy points, etc.</li>
+        <li>A platform to provide cricket updates including score, schedules, articles, player stats and fantasy points, etc.</li>
         </ul>
         <h2>Machine &amp; Motors</h2>
         <ul>
         <li>Mar 2017</li>
-        <li>eCommerce portal for types of machinery </li>
+        <li>Machine &amp; Motors is a platform similar to IndiaMart, designed to connect buyers and sellers of industrial machines and motors, streamlining transactions and facilitating business growth.</li>
         </ul>
         <h2>Medwisor</h2>
         <ul>
         <li>Dec 2018</li>
-        <li>A platform which provides expert opinions and getting appointments on the go.</li>
+        <li>Medwisor is a platform similar to Practo, designed with a microservice architecture to provide expert medical opinions, hospital and patient onboarding, and seamless appointment booking on the go.</li>
         </ul>
         <h1>Technologies</h1>
         <ul>
